--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router": "^5.2.1",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
