--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^8.10.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.1",
+    "react-comments-section": "^1.0.7",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router": "^5.2.1",
