--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-bootstrap": "^2.0.1",
     "react-comments-section": "^1.0.7",
     "react-dom": "^17.0.2",
+    "react-google-font-loader": "^1.1.0",
     "react-redux": "^7.2.6",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
